--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html lang=en>
 
-<head>
+    <head>
 
-    <meta charset=utf-8>
-    <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <meta charset=utf-8>
+        <title></title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-</head>
+    </head>
 
+    <header>
+
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">
+            <img style="max-width:120px; margin-top: -7px;" src="{{ url_for('static', filename='images/mainlogo.png') }}">
+            </a>
+        </div>
+
+        <div class="container-fluid">
+            <a href="/skapablaha/">
+                <button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right 15px">
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Skapa blaha!
+                </button>
+            </a>
+
+            <ul class="nav navbar-nav navbar-right">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                  Launch demo modal
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                      </div>
+                      <div class="modal-body">
+                        ...
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </ul>
+        </div>
+        
+    </header>
+
+    <body>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    </body>
+    
 </html>
