--- a/templates/header.html
+++ b/templates/header.html
@@ -44,10 +44,13 @@
                 </li>
               </ul>
 
-              <ul class="nav navbar-nav navbar-right">
-                  <button type="button" class="btn btn-default navbar-btn">Sign up</button>
-                  <button type="button" class="btn btn-default navbar-btn">Sign in</button>               
-              </ul>
+            <ul class="nav navbar-nav navbar-right">
+
+                <a href="/register/" class="btn btn-info navbar-btn" role="button">Sign in</a>               
+                <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign up</a>
+
+            </ul>
+
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container -->
         </nav>
