--- a/templates/header.html
+++ b/templates/header.html
@@ -46,8 +46,8 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <a href="/register/" class="btn btn-info navbar-btn" role="button">Sign in</a>               
-                <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign up</a>
+                <a href="/register/" class="btn btn-info navbar-btn" role="button">Sign up</a>               
+                <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign in</a>
 
             </ul>
 
