--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
         <title></title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     </head>
