--- a/templates/header.html
+++ b/templates/header.html
@@ -47,7 +47,7 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <a href="/register/" class="btn btn-info navbar-btn" role="button">Sign up</a>               
+                <a href="/register/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Sign up</a>               
                 <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign in</a>
 
             </ul>
