add logout button when logged in

--- a/templates/header.html
+++ b/templates/header.html
@@ -47,9 +47,12 @@
 
             <ul class="nav navbar-nav navbar-right">
 
+                {% if session.logged_in %}
+                <a href="/logout/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Logout</a>
+                {% else %}
                 <a href="/register/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Sign up</a>               
                 <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign in</a>
-
+                {% endif %}
             </ul>
 
             </div><!-- /.navbar-collapse -->
