--- a/templates/header.html
+++ b/templates/header.html
@@ -4,10 +4,17 @@
     <head>
 
         <meta charset=utf-8>
-        <title></title>
+        <title>Wow miljö</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
+        <!-- General custom css -->
         <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+
+        <!-- Custom CSS for start page -->
+        <link href="{{ url_for('static', filename='css/homepage.css') }}" rel="stylesheet">
+
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     </head>
@@ -66,9 +73,6 @@
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
-        <div class="border-row" style="width:100%; margin-bottom: 15px;"></div>
-        
-        <div class="container-fluid" style="min-height:100%;">
 
         {% block body %}{% endblock %}
 
