--- a/templates/main.html
+++ b/templates/main.html
@@ -4,14 +4,14 @@
 {% block body %}
 
     <!-- Header -->
-    <header id="top" class="header">
+    <section id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1>Börja visualisera yo</h1>
+            <h3>Visualiseringsverktyg &amp; coola saker shit pommes frites</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class="btn btn-dark btn-lg">Upptäck mer</a>
         </div>
-    </header>
+    </section>
 
     <!-- About -->
     <section id="about" class="about">
@@ -170,7 +170,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Börja visualisera yo</strong>
                     </h4>
                     <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
                     <ul class="list-unstyled">
