--- a/templates/header.html
+++ b/templates/header.html
@@ -31,15 +31,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Brand</a>
+              {% if session.logged_in %}
+              <a class="navbar-brand" href="#">{{ session.username }}</a>
+              {% else %}
+              <a class="navbar-brand" href="#">Hem</a>
+              {% endif %}
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="#">Link</a></li>
+                <li><a href="#">Kontrollpanel</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wow, lista <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -57,8 +61,8 @@
                 {% if session.logged_in %}
                 <a href="/logout/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Logout</a>
                 {% else %}
-                <a href="/register/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Sign up</a>               
-                <a href="/login/" class="btn btn-info navbar-btn" role="button">Sign in</a>
+                <a href="/register/" class="btn btn-info navbar-btn" role="button" style="margin-left: 15px;">Registrera</a>               
+                <a href="/login/" class="btn btn-info navbar-btn" role="button">Logga in</a>
                 {% endif %}
             </ul>
 
