--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -230,6 +230,12 @@ hr.small {
     .map {
         height: 75%;
     }
+    .text-vertical-center h1 {
+        margin: 0;
+        padding: 0;
+        font-size: 3.5em;
+        font-weight: 500;
+    }
 }
 
 /* Footer */
