--- a/templates/header.html
+++ b/templates/header.html
@@ -20,8 +20,7 @@
     </head>
 
     <header>
-        
-        <nav class="navbar navbar-default navbar-static-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
