--- a/templates/login.html
+++ b/templates/login.html
@@ -2,21 +2,35 @@
 
 {% block body %}
 
-<div class="container">
-    <br>
+ <div class="container" style="margin-top: 100px;">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Logga in</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form" action="" method="post">
+                            <fieldset>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Användarnamn" name="username" value="{{request.form.username}}">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" placeholder="Lösenord" name="password" value="{{request.form.password}}">
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input name="remember" type="checkbox" value="Remember Me">Håll mig inloggad
+                                    </label>
+                                </div>
+                                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <h4>Login blaha</h4>
-    <br>
-    <form action="" class="form-inline" method="post">
-        <input type="text" class="form-control" placeholder="Username" name="username" value="{{request.form.username}}">
-
-        <input type="password" class="form-control" placeholder="Password" name="password" value="{{request.form.password}}">
-        <input class="btn btn-default" type="submit" value="Login">
-    </form>
-
-    <p>{{error}}</p>
-    
-</div>
-
-
+    <!--p>{{error}}</p-->
 {% endblock %}
